[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
tokio-stream = "0.1.11"
serde = { version = "1.0.130", features = ["derive"] }
futures = "0.3.18"
actix-web = "4"
dotenv = "0.15.0"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
env_logger = "0.10.0"
serde_json = "1.0.91"